fix results css overflow bug and text choice number assigner

--- a/app/assets/stylesheets/simple/event_results.css.scss
+++ b/app/assets/stylesheets/simple/event_results.css.scss
@@ -50,6 +50,7 @@
 .simple-voter {
 	min-width: 100%;
 	overflow-y: hidden;
+	overflow-x: scroll;
 }
 
 
